<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/orange_yellow_crayola"
        android:textSize="25sp"
        android:textStyle="bold" />



    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_fullname_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
            />


        <EditText
            android:id="@+id/full_name"
            android:inputType="text"
            android:autofillHints="name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_input"
            android:padding="20dp"
            android:hint="@string/none"
            android:textSize="23sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_mail_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
            />


        <EditText
            android:id="@+id/mail"
            android:autofillHints="emailAddress"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_input"
            android:padding="20dp"
            android:hint="@string/none"
            android:textSize="23sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_password_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
            />


        <EditText
            android:id="@+id/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_input"
            android:padding="20dp"
           android:hint="@string/none"
            android:textSize="23sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_password_confirmation_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
            />
        <EditText
            android:id="@+id/password_confirmation"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:autofillHints="password"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_input"
            android:padding="20dp"
            android:hint="@string/none"
            android:textSize="23sp" />


        <Button
            android:id="@+id/submit_button"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:background="@drawable/primary_rounded_button"
            android:padding="5dp"
            android:text="@string/register_submit" />


    </LinearLayout>
</LinearLayout>