<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/reset_pasword_title"
        android:textColor="@color/orange_yellow_crayola"
        android:textSize="35sp"
        android:textStyle="bold" />



    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_new_password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
        />


        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_input"
            android:padding="20dp"
            android:hint="@string/none"
            android:textColorHint="@color/orange_yellow_crayola"
            android:textSize="23sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_new_password_confirmation"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
            />
        <EditText
            android:id="@+id/password_confirmation"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_input"
            android:padding="20dp"
            android:textColorHint="@color/orange_yellow_crayola"
            android:textSize="23sp"
            android:autofillHints="password"/>


        <Button
            android:id="@+id/submit_button"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/primary_rounded_button"
            android:padding="20dp"
            android:text="@string/reset_password_submit"/>


    </LinearLayout>
</LinearLayout>