<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.fragments.FragmentLogin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_weight="0"
            android:gravity="center"

            android:text="@string/login_title"
            android:textColor="@color/orange_yellow_crayola"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/primary_input"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="12dp"
                android:hint="@string/login_input_mail"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/orange_yellow_crayola"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/primary_input"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/login_input_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@color/orange_yellow_crayola"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/forgot_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_forgot"
                android:textColor="@color/orange_yellow_crayola"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/primary_rounded_button"
                android:padding="20dp"
                android:text="@string/login_submit" />


        </LinearLayout>


    </LinearLayout>
</layout>