<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:hintEnabled="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_title"
            android:textColor="@color/orange_yellow_crayola"
            android:textSize="25sp"
            android:textStyle="bold" />


        <com.ksainthi.inance.components.Alert
            android:id="@+id/alert"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </com.ksainthi.inance.components.Alert>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/forgot_input_mail"
                android:textColor="@color/orange_yellow_crayola"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/mail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/primary_input"
                android:hint="@string/none"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="@color/orange_yellow_crayola"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/primary_rounded_button"
                android:padding="20dp"
                android:text="@string/forgot_reset_button" />

        </LinearLayout>
    </LinearLayout>
</layout>