<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Autofill"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/mobile_verification_title"
        android:textColor="@color/orange_yellow_crayola"
        android:textSize="30sp"
        android:textStyle="bold" />



    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_verification_number_phone_label"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
            />


        <EditText
            android:id="@+id/number_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_input"
            android:hint="@string/none"
            android:padding="20dp"
            android:textColorHint="@color/orange_yellow_crayola"
            android:textSize="23sp"/>


        <TextView
            android:id="@+id/send_code_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_verification_send_code"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/orange_yellow_crayola"
            />



        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_digit"
                android:inputType="number"
                android:padding="20dp"
                android:background="@drawable/primary_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"/>

            <EditText
                android:inputType="number"
                android:layout_margin="10dp"
                android:id="@+id/second_digit"
                android:padding="20dp"
                android:background="@drawable/primary_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"/>

            <EditText
                android:inputType="number"
                android:layout_margin="10dp"
                android:id="@+id/third_digit"
                android:padding="20dp"
                android:background="@drawable/primary_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"/>


            <EditText
                android:inputType="number"
                android:layout_margin="10dp"
                android:id="@+id/fourth_digit"
                android:padding="20dp"
                android:background="@drawable/primary_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="1"/>

        </LinearLayout>

        <ImageButton
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/round_shape"
            android:src="@drawable/ic_check"
            android:contentDescription="@string/none"
            app:backgroundTint="@null" />
        <Button
            android:id="@+id/submit_button"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/primary_rounded_button"
            android:padding="20dp"
            android:text="@string/mobile_verification_submit" />



    </LinearLayout>
</LinearLayout>